--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+--------------------------------------------style file---------------------------------------------------------
 *{
     margin: 0;
     padding: 0;
